little fix in chat
now I send the private messages only to interested clients